--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,11 @@
 
   <!-- add to homescreen for ios -->
   <meta name="mobile-web-app-capable" content="yes" />
-  <meta name="apple-mobile-web-app-status-bar-style " content="black" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+
+  <meta charset="utf-8">
+  <title>CRM</title>
+
 </head>
 
 <body>
